--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@ apply plugin: 'war'
 apply plugin: 'gaelyk'
 apply plugin: 'appengine-geb'
 
-File devLogFile = new File('logs/devserver-log.txt')
-if(devLogFile.exists()) {
-	println devLogFile.name + ' -> '+ devLogFile.delete()
-	devLogFile = new File(devLogFile.name + '.lck')
-	println devLogFile.name + ' -> '+ devLogFile.delete()
+File devLogDir = new File('logs')
+if(devLogDir.exists()) {
+	devLogDir.eachFile { file ->
+		println file.name + ' -> '+ file.delete()
+	}
 }
 
 def compatibilityVersion = 1.7
@@ -35,7 +35,7 @@ appengine {
 	//httpAddress = '192.168.1.104'
 	httpPort = 1111
 	disableUpdateCheck = false
-	
+
 	appcfg {
 		email = 'vteial@wybis.com'
 		noCookies = true
@@ -69,7 +69,7 @@ dependencies {
 
 	testCompile 'org.gaelyk:gaelyk-spock:0.4'
 	testCompile "com.google.appengine:appengine-api-stubs:$gaeVersion",
-				"com.google.appengine:appengine-testing:$gaeVersion"
+			"com.google.appengine:appengine-testing:$gaeVersion"
 
 	functionalTestCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.40.0'
 	functionalTestCompile 'org.gebish:geb-spock:0.9.2'
