updating latest changes...

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,9 +31,26 @@
 	</servlet>
 
 	<filter>
+		<filter-name>SecurityFilter</filter-name>
+		<filter-class>io.vteial.wys.web.filters.SecurityFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>SecurityFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
 		<filter-name>RoutesFilter</filter-name>
 		<filter-class>groovyx.gaelyk.routes.RoutesFilter</filter-class>
 	</filter>
+	<filter-mapping>
+		<filter-name>RoutesFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
 
 	<servlet-mapping>
 		<servlet-name>GroovletServlet</servlet-name>
@@ -43,15 +60,6 @@
 		<servlet-name>TemplateServlet</servlet-name>
 		<url-pattern>*.gtpl</url-pattern>
 	</servlet-mapping>
-
-	<filter-mapping>
-		<filter-name>RoutesFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-		<dispatcher>INCLUDE</dispatcher>
-		<dispatcher>FORWARD</dispatcher>
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>ERROR</dispatcher>
-	</filter-mapping>
 
 	<!-- Uncomment the following security constraint if you want to secure your 
 		incoming email endpoint -->
@@ -63,14 +71,16 @@
 			<url-pattern>/cron/*</url-pattern>
 			<url-pattern>/_ah/mail/*</url-pattern>
 			<url-pattern>/_ah/xmpp/message/chat/</url-pattern>
+			<!-- 
 			<url-pattern>/_ah/gaelyk-datastore-viewer/browse</url-pattern>
 			<url-pattern>/_ah/gaelyk-console/</url-pattern>
-		</web-resource-collection> 
+			-->
+		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
-	
+
 	<welcome-file-list>
 		<welcome-file>index</welcome-file>
 	</welcome-file-list>
